--- a/Amorem Artis/Amorem Artis/UserControlInstrumentos.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlInstrumentos.xaml
@@ -26,16 +26,17 @@
                 <Button x:Name="btnModificarInstrumento" Content="Modificar Instrumento"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnModificarInstrumento_Click"/>
                 <Button x:Name="btnElimarInstrumento" Content="Eliminar Instrumento"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnElimarInstrumento_Click"/>
                 <StackPanel x:Name="stkInstrumento" Orientation="Horizontal"  HorizontalAlignment="Center" Margin="20,0,0,0" Visibility="Collapsed">
-                    <TextBlock Text="Instrumento" FontSize="20"/>
-                    <TextBox x:Name="txtInstrumento" Width="200" FontSize="20"/>
+                    <TextBlock Text="Instrumento" FontSize="20" />
+                    <TextBox x:Name="txtInstrumento" Width="200" FontSize="20" Visibility="Collapsed"/>
                 </StackPanel>
+                <TextBlock x:Name="txtIns" Text="Instrumento" FontSize="20"  Margin="20,0,0,0" Visibility="Collapsed"/>
             </StackPanel>
         </StackPanel>
         <DataGrid x:Name="gridInstrumentos" Margin="20,0,20,0"  Visibility="Visible" VerticalAlignment="Stretch" Grid.Row="3"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="4">
             <Button x:Name="btnAgregar" Content="Agregar" Margin="10,0,0,0" Visibility="Collapsed"/>
             <Button x:Name="btnModificar" Content="Modificar" Margin="10,0,0,0"  Visibility="Collapsed" />
-            <Button x:Name="btnEliminar" Content="Elimanar" Margin="10,0,0,0" Visibility="Collapsed"  />
+            <Button x:Name="btnEliminar" Content="Eliminar" Margin="10,0,0,0" Visibility="Collapsed"  />
             <Button x:Name="btnVolver" Content="Volver" Margin="10,0,0,0" Visibility="Collapsed" Click="BtnVolver_Click" />
         </StackPanel>
     </Grid>
