--- a/Amorem Artis/Amorem Artis/UserControlMaestroModificar.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlMaestroModificar.xaml
@@ -79,7 +79,7 @@
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Row="9">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="btnQuitar" Content="Aplicar" Visibility="Visible" Click="BtnAgregar_Click"/>
+                <Button x:Name="btnQuitar" Content="Aplicar" Click="BtnQuitar_Click"/>
             </StackPanel>
         </StackPanel>
     </Grid>
