--- a/Amorem Artis/Amorem Artis/UserControlMaestroAgregar.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlMaestroAgregar.xaml
@@ -7,7 +7,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid VerticalAlignment="Top" Background="#EFE2BA" Height="450">
+    <Grid VerticalAlignment="Top" Height="450">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
@@ -17,54 +17,53 @@
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <Grid Background="#F12C20" Grid.Row="0">
-            <TextBlock Text="Agregar maestros" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
+        <Grid Grid.Row="0">
+            <TextBlock Text="Nuevo maestro" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
             <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#F12C20" BorderBrush="#F12C20" Margin="0,0,10,0" Click="Salir_Click"/>
         </Grid>
-        <StackPanel Orientation="Vertical" Grid.Row="2">
+        <StackPanel Orientation="Vertical" Grid.Row="1">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                 <Label Name="lblIdentidad" Content="Identidad" HorizontalAlignment="Left" Margin="100,10,0,0" VerticalAlignment="Top" FontSize="20"/>
                 <TextBox Name="txtIdentidad" HorizontalAlignment="Left" Height="25" Margin="20,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="180"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Row="3">
+        <StackPanel Orientation="Vertical" Grid.Row="2">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                 <Label Name="lblNombres" Content="Nombres" HorizontalAlignment="Left" Margin="100,10,0,0" VerticalAlignment="Top" FontSize="20"/>
                 <TextBox Name="txtNombres1" HorizontalAlignment="Left" Height="25" Margin="20,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="180"/>
                 <TextBox Name="txtNombres2" HorizontalAlignment="Left" Height="25" Margin="15,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="180"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Row="4">
+        <StackPanel Orientation="Vertical" Grid.Row="3">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                 <Label Name="lblApellidos" Content="Nombres" HorizontalAlignment="Left" Margin="100,10,0,0" VerticalAlignment="Top" FontSize="20"/>
                 <TextBox Name="txtApellidos1" HorizontalAlignment="Left" Height="25" Margin="20,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="180"/>
                 <TextBox Name="txtApellidos2" HorizontalAlignment="Left" Height="25" Margin="15,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="180"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Row="5">
+        <StackPanel Orientation="Vertical" Grid.Row="4">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                 <Label Name="lblEdad" Content="Edad" HorizontalAlignment="Left" Margin="100,10,0,0" VerticalAlignment="Top" FontSize="20"/>
                 <ComboBox Name="cmbEdad" HorizontalAlignment="Left" Margin="57,13,22,0" VerticalAlignment="Top" Width="120"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Row="6">
+        <StackPanel Orientation="Vertical" Grid.Row="5">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                 <Label Name="lblTelefono" Content="Telefono" HorizontalAlignment="Left" Margin="100,10,0,0" VerticalAlignment="Top" FontSize="20"/>
                 <TextBox Name="txtTelefono" HorizontalAlignment="Left" Height="25" Margin="25,15,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="180"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Row="7">
+        <StackPanel Orientation="Vertical" Grid.Row="6">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                 <Label Name="lblTipo" Content="Tipo Maestro" HorizontalAlignment="Left" Margin="100,10,0,0" VerticalAlignment="Top" FontSize="20"/>
                 <ComboBox Name="cmbTipo" HorizontalAlignment="Left" Margin="12,13,22,0" VerticalAlignment="Top" Width="120"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Row="8">
+        <StackPanel Orientation="Vertical" Grid.Row="7">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="btnAgregar" Content="Agregar"  Margin="0,10,0,0" Visibility="Visible" Click="BtnAgregar_Click"/>
-                <Button x:Name="btnVolver" Content="Volver" Margin="10,10,0,0" Visibility="Visible" Click="BtnVolver_Click"/>
+                <Button x:Name="btnAgregar" Content="Agregar"  Margin="0,20,0,0" Click="BtnAgregar_Click"/>
+                <Button x:Name="btnVolver" Content="Volver" Margin="10,20,0,0" Click="BtnVolver_Click"/>
             </StackPanel>
         </StackPanel>
     </Grid>
