--- a/Amorem Artis/Amorem Artis/UserControlMaestroModificar.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlMaestroModificar.xaml
@@ -7,25 +7,23 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid VerticalAlignment="Stretch" Background="#EFE2BA" >
+    <Grid VerticalAlignment="Stretch">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="45"/>
-            <RowDefinition Height="45"/>
-            <RowDefinition Height="45"/>
-            <RowDefinition Height="45"/>
-            <RowDefinition Height="45"/>
-            <RowDefinition Height="45"/>
-            <RowDefinition Height="45"/>
-            <RowDefinition Height="45"/>
-            <RowDefinition Height="45"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <Grid Background="#F12C20" Grid.Row="0">
-            <TextBlock Text="Modificar Maestros" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
+        <Grid Grid.Row="0">
+            <TextBlock Text="Modificar maestro" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
             <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#F12C20" BorderBrush="#F12C20" Margin="0,0,10,0" Click="Salir_Click"/>
         </Grid>
-        <StackPanel Orientation="Vertical" Grid.Row="2">
+        <StackPanel Orientation="Vertical" Grid.Row="1">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Label Name="lblIdentidad" Content="Identidad" Margin="30,10,0,0" VerticalAlignment="Top" FontSize="20"/>
                 <TextBox Name="txtIdentidad" Height="25" Margin="20,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
@@ -33,7 +31,7 @@
                 <TextBox Name="txtIdentidadNueva"  Height="25" Margin="20,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Row="3">
+        <StackPanel Orientation="Vertical" Grid.Row="2">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Label Name="lblNombre1" Content="Nombres" Margin="30,10,0,0" VerticalAlignment="Top" FontSize="20"/>
                 <TextBox Name="txtNombre1" Height="25" Margin="20,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
@@ -41,13 +39,13 @@
                 <TextBox Name="txtNuevo1" Height="25" Margin="15,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Row="4">
+        <StackPanel Orientation="Vertical" Grid.Row="3">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <TextBox Name="txtNombre2" Height="25" Margin="140,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
                 <TextBox Name="txtNuevo2" Height="25" Margin="105,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Row="5">
+        <StackPanel Orientation="Vertical" Grid.Row="4">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Label Name="lblApellido1" Content="Apellidos" Margin="30,10,0,0" VerticalAlignment="Top" FontSize="20"/>
                 <TextBox Name="txtApellido1" Height="25" Margin="20,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
@@ -55,13 +53,13 @@
                 <TextBox Name="txtApeNuevo1" Height="25" Margin="15,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Row="6">
+        <StackPanel Orientation="Vertical" Grid.Row="5">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <TextBox Name="txtApellido2" HorizontalAlignment="Left" Height="25" Margin="140,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
                 <TextBox Name="txtApeNuevo2" HorizontalAlignment="Left" Height="25" Margin="105,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Row="7">
+        <StackPanel Orientation="Vertical" Grid.Row="6">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Label Name="lblEdad" Content="Edad"  Margin="30,10,0,0" VerticalAlignment="Top" FontSize="20"/>
                 <TextBox Name="txtEdad" Height="25" Margin="55,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
@@ -69,7 +67,7 @@
                 <TextBox Name="txtIEdad" Height="25" Margin="30,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Row="8">
+        <StackPanel Orientation="Vertical" Grid.Row="7">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Label Name="lblTelefono" Content="Telefono"  Margin="30,10,0,0" VerticalAlignment="Top" FontSize="20"/>
                 <TextBox Name="txtTElefono" Height="25" Margin="25,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
@@ -77,9 +75,9 @@
                 <TextBox Name="txtTelefono" Height="25" Margin="30,015,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Row="9">
+        <StackPanel Orientation="Vertical" Grid.Row="8">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="btnQuitar" Content="Aplicar" Click="BtnQuitar_Click"/>
+                <Button x:Name="btnAplicar" Margin="0,10,0,0" Content="Aplicar" Click="BtnAplicar_Click"/>
             </StackPanel>
         </StackPanel>
     </Grid>
