--- a/Amorem Artis/Amorem Artis/UserControlSecciones.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlSecciones.xaml
@@ -7,15 +7,14 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid VerticalAlignment="Stretch" Background="#EFE2BA">
+    <Grid VerticalAlignment="Stretch">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <Grid Background="#F12C20" Grid.Row="0">
+        <Grid Grid.Row="0">
             <TextBlock Text="Secciones" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
             <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#F12C20" BorderBrush="#F12C20" Margin="0,0,10,0" Click="Salir_Click"/>
         </Grid>
@@ -33,7 +32,7 @@
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="1" Orientation="20,0,20,0">
                 <TextBlock Text="Secciones" HorizontalAlignment="Center" Margin="0,0,0,10" FontSize="22"/>
-                <DataGrid x:Name="gridMaestros" Visibility="Visible" VerticalAlignment="Stretch" MinHeight="210"/>
+                <DataGrid x:Name="gridSecciones" Visibility="Visible" VerticalAlignment="Stretch" MinHeight="210"/>
             </StackPanel>
         </Grid>
     </Grid>
