--- a/Amorem Artis/Amorem Artis/UserControlPadres.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlPadres.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="Amorem_Artis.UserControlAlumno"
+﻿<UserControl x:Class="Amorem_Artis.UserControlPadres"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Amorem_Artis"
-              mc:Ignorable="d" 
+          mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid VerticalAlignment="Stretch"  Background="#EFE2BA">
         <Grid.RowDefinitions>
@@ -16,10 +16,10 @@
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
         <Grid Background="#F12C20" Grid.Row="0">
-            <TextBlock Text="Alumno" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
+            <TextBlock Text="Padre" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
             <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#F12C20" BorderBrush="#F12C20" Margin="0,0,10,0" Click="Salir_Click" />
         </Grid>
-        <Grid Grid.Row="3" x:Name="GridDatosAlumno" Visibility="Collapsed">
+        <Grid Grid.Row="3" x:Name="GridDatosPadre" Visibility="Collapsed">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
@@ -44,31 +44,22 @@
                 <StackPanel Orientation="Horizontal" >
                     <TextBlock Text="Telefono " FontSize="20" VerticalAlignment="Center"/>
                     <TextBox x:Name="txtTelefono"  Width="200" FontSize="20"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" >
-                    <TextBlock Text="Tipo alumno     " FontSize="20" VerticalAlignment="Center"/>
-                    <ComboBox x:Name="cbTipoAlumno"  Width="150" FontSize="20"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" >
-                    <TextBlock Text="Padre/madre    " FontSize="20" VerticalAlignment="Center"/>
-                    <ComboBox x:Name="cbPadre"  Width="150" FontSize="20"/>
-                </StackPanel>
+                </StackPanel>                          
             </StackPanel>
-            
             <DataGrid Grid.Column="1" Margin="10"/>
         </Grid>
 
         <StackPanel Orientation="Vertical" Grid.Row="2">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="btnNuevoAlumno" Content="Nuevo Alumno"  Visibility="Visible" Click="BtnNuevoAlumno_Click"/>
-                <Button x:Name="btnModificarAlumno" Content="Modificar Alumno"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnModificarAlumno_Click"/>
-                <Button x:Name="btnElimarAlumno" Content="Eliminar Alumno"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnElimarAlumno_Click"/>
-                <TextBlock x:Name="txtAlumno" Text="Alumno" FontSize="20" Visibility="Collapsed" Margin="20,0,0,0"/>
-                <ComboBox x:Name="ComboAlumno" Width="150" Visibility="Collapsed" />
+                <Button x:Name="btnNuevoPadre" Content="Nuevo Padre"  Visibility="Visible" Click="BtnNuevoPadre_Click"/>
+                <Button x:Name="btnModificarPadre" Content="Modificar Padre"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnModificarPadre_Click"/>
+                <Button x:Name="btnElimarPadre" Content="Eliminar Padre"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnElimarPadre_Click"/>
+                <TextBlock x:Name="txtPadre" Text="Padre" FontSize="20" Visibility="Collapsed" Margin="20,0,0,0"/>
+                <ComboBox x:Name="ComboPadre" Width="150" Visibility="Collapsed" />
             </StackPanel>
-           
+
         </StackPanel>
-        <DataGrid x:Name="DataGridAlumnos" Margin="20,0,20,0"  Visibility="Visible" VerticalAlignment="Stretch" Grid.Row="3"/>
+        <DataGrid x:Name="DataGridPadres" Margin="20,0,20,0"  Visibility="Visible" VerticalAlignment="Stretch" Grid.Row="3"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="4">
             <Button x:Name="btnAgregar" Content="Agregar" Margin="10,0,0,0" Visibility="Collapsed"/>
             <Button x:Name="btnModificar" Content="Modificar" Margin="10,0,0,0"  Visibility="Collapsed" />
