--- a/Amorem Artis/Amorem Artis/UserControlClase.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlClase.xaml
@@ -24,9 +24,9 @@
             <TextBlock Text="Alumno" FontSize="20" VerticalAlignment="Center" Margin="30,0,0,0"/>
             <TextBox x:Name="txtAlumno" Width="150" VerticalAlignment="Center"/>
         </StackPanel>
-        <Grid Background="#F12C20" Grid.Row="0">
+        <Grid Background="#9b0000" Grid.Row="0">
             <TextBlock Text="Clase" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
-            <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#F12C20" BorderBrush="#F12C20" Margin="0,9,10,9"  Click="Salir_Click" />
+            <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#9b0000" BorderBrush="#9b0000" Margin="0,9,10,9"  Click="Salir_Click" />
         </Grid>
         <StackPanel Orientation="Vertical" Grid.Row="3"  VerticalAlignment="Center">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
@@ -50,7 +50,7 @@
                 <ComboBox x:Name="cmbSeccion" Width="200" FontSize="20"/>
             </StackPanel>
         </Grid>
-        <DataGrid x:Name="dataGridClase" Margin="20,0,20,0"  Visibility="Visible" VerticalAlignment="Stretch" Grid.Row="4"/>
+        <DataGrid x:Name="dataGridBusqueda" Margin="20,0,20,0"  Visibility="Visible" VerticalAlignment="Stretch" Grid.Row="4"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="5">
             <Button x:Name="btnAgregar" Content="Agregar" Margin="10,0,0,0" Visibility="Collapsed"/>
             <Button x:Name="btnEliminar" Content="Eliminar" Margin="10,0,0,0" Visibility="Collapsed"  />
