--- a/Amorem Artis/Amorem Artis/UserControlSolfeoMaestro.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlSolfeoMaestro.xaml
@@ -1,10 +1,9 @@
-﻿<UserControl x:Class="Amorem_Artis.UserControlClaseMaestro"
+﻿<UserControl x:Class="Amorem_Artis.UserControlSolfeoMaestro"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Amorem_Artis"
-            mc:Ignorable="d" 
+ mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid VerticalAlignment="Stretch"  Background="#EFE2BA">
         <Grid.RowDefinitions>
@@ -21,36 +20,42 @@
             <Button x:Name="btnBuscar" Content="Buscar"/>
             <TextBlock Text="Solfeo" FontSize="20" VerticalAlignment="Center" Margin="30,0,0,0"/>
             <TextBox x:Name="txtSolfeo" Width="150" VerticalAlignment="Center"/>
-            <TextBlock Text="Maestro" FontSize="20" VerticalAlignment="Center" Margin="30,0,0,0"/>
-            <TextBox x:Name="txtMaestro" Width="150" VerticalAlignment="Center"/>
+            <TextBlock Text="Alumno" FontSize="20" VerticalAlignment="Center" Margin="30,0,0,0"/>
+            <TextBox x:Name="txtAlumno" Width="150" VerticalAlignment="Center"/>
         </StackPanel>
         <Grid Background="#9b0000" Grid.Row="0">
-            <TextBlock Text="Clase" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
-            <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#9b0000" BorderBrush="#9b0000" Margin="0,9,10,9"  Click="Salir_Click" />
+            <TextBlock Text="Solfeo" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
+            <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#9b0000" BorderBrush="#9b0000" Margin="0,9,10,9" Click="Salir_Click" />
         </Grid>
         <StackPanel Orientation="Vertical" Grid.Row="3"  VerticalAlignment="Center">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="btnNuevoClase" Content="Nueva Clase"  Visibility="Visible" Click="BtnNuevoClase_Click" />
-                <Button x:Name="btnElimarClase" Content="Eliminar Clase"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnElimarClase_Click" />
+                <Button x:Name="btnAgregarDeSolfeo" Content="Agregar a solfeo"  Visibility="Visible"  Click="BtnAgregarDeSolfeo_Click" />
+                <Button x:Name="btnEliminarDeSolfeo" Content="Eliminar de solfeo"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnEliminarDeSolfeo_Click" />
             </StackPanel>
         </StackPanel>
-        <Grid x:Name="gridCla" Grid.Row="4" Visibility="Collapsed">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0" VerticalAlignment="Center" Orientation="Horizontal" HorizontalAlignment="Center" >
-                <TextBlock Text="Maestro" FontSize="20"/>
-                <ComboBox x:Name="cmbMaestro" Width="200" FontSize="20"/>
-                <TextBlock Text="Solfeo" FontSize="20" Margin="30,0,0,0"/>
-                <ComboBox x:Name="cmbSolfeo" Width="200" FontSize="20"/>
+     
+        <DataGrid x:Name="dataGridBusqueda" Margin="20,0,20,0"  Visibility="Visible" VerticalAlignment="Stretch" Grid.Row="4"/>
+        
+        <Grid x:Name="GridDetalles" Grid.Row="4" Visibility="Collapsed">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Vertical" Margin="20" HorizontalAlignment="Center" >
+                <StackPanel Orientation="Horizontal" Margin="0,0,0,30">
+                    <TextBlock Text="Alumno"  FontSize="20"/>
+                    <ComboBox x:Name="cmbAlumno" Width="150" FontSize="20"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Solfeo  "  FontSize="20"/>
+                    <ComboBox x:Name="cmbSolfeo" Width="150" FontSize="20"/>
+                </StackPanel>
             </StackPanel>
-            <StackPanel Grid.Row="1" VerticalAlignment="Center" Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBlock Text="Seccion" FontSize="20"/>
-                <ComboBox x:Name="cmbSeccion" Width="200" FontSize="20"/>
-            </StackPanel>
+
+            <DataGrid x:Name="dataSolfeo" Grid.Column="1" Margin="10" />
+
         </Grid>
-        <DataGrid x:Name="dataGridClase" Margin="20,0,20,0"  Visibility="Visible" VerticalAlignment="Stretch" Grid.Row="4"/>
+        
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="5">
             <Button x:Name="btnAgregar" Content="Agregar" Margin="10,0,0,0" Visibility="Collapsed"/>
             <Button x:Name="btnEliminar" Content="Eliminar" Margin="10,0,0,0" Visibility="Collapsed"  />
